@@ -189,6 +189,7 @@
  *
  */
 
+#include <string>
 #include <tuple>
 #include <vector>
 
