@@ -18,4 +18,5 @@ file,file size(MB),ID3v2 version,ID3v2 revision,ID3v2 size(bytes),ID3v2 flags,ID
 "rare_frames.mp3",0.008,4,0,997,0x00,0,,,,13,,,,0,,1,A COMMENT,,,,,,7185,7497559603d1f23dc5e39b1231dbd228,0,0,,,,, 00000000 00000000 00000000,13
 "sleepwalking.mp3",2.113,2,0,2192,0x00,0,Murley Braid Quartet,Sheep Walking,Mnemosyne's March (Demo),(8),iTunes v6.0.4,,,0,,2, 000006E1 000000D3 00004F8D 00001990 00006729 00001E1A 000064D1 00007E10 00005582 0000DF78, 00000000 00000210 000007A2 00000000004A6C4E 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000,,,,,2213094,a9937731dd1fd87a8e4fbc0fa898feeb,,,,,,,,
 "u2-promenade.mp3",2.862,3,0,8182,0x00,0,U2,Promenade,The Unforgettable Fire,Alternative,Winamp 5.5,1984,,0,,1,"In many ways, U2 took their fondness for sonic bombast as far as it could go on War, so it isn't a complete surprise that they chose to explore the intricacies of the Edge's layered, effects-laden guitar on the follow-up, The Unforgettable Fire. Working with producers Brian Eno and Daniel Lanois, U2 created a dark, near-hallucinatory series of interlocking soundscapes that are occasionally punctuated by recognizable songs and melodies. In such a setting, the band both flourishes and flounders, creating some of their greatest music, as well as some of their worst. ""Elvis Presley and America"" may well be Bono's most embarrassing attempt at poetry, yet it is redeemed by the chilling and wonderful ""Bad,"" a two-chord elegy for an addict that is stunning in its control and mastery. Similarly, the wet, shimmering textures of the title track, the charging ""A Sort of Homecoming,"" and the surging Martin Luther King Jr. tribute ""Pride (In the Name of Love)"" are all remarkable, ranking among their very best music, makin",,,,,,2992210,0c0e457ce768e82764e556549bb7fc85,1,0,U2,Promenade,The Unforgettable Fire,1984,"In many ways, U2 took their",20
+"v1-only.mp3",0.000,,,,,,,,,,,,,,,,,,,,,,0,d41d8cd98f00b204e9800998ecf8427e,0,0,Pearl Jam & Nirvana,Here She Comes Now (live),,,,6
 "waterfall.mp3",2.221,3,0,2277,0x00,0,Enya,Waterfall,,New Age,,1998,,0,,2,,celtic,,,,,2326161,61aa404f2f385f432a0c606ce59f30e9,0,0,Enya,Waterfall,,1998,celtic,10
