@@ -1,6 +1,5 @@
 ###########################################################################
 # scribbu test utilities
-# $id: $
 ###########################################################################
 
 function log()
